syntax = "proto3";

package ch.guengel.lastseenservice;
option go_package = "lastseenservice";
option java_package = "ch.guengel.lastseenservice";

service LastSeen {
    rpc GetLastSeen (LastSeenRequest) returns (LastSeenReply) {
    }
    rpc UpdateLastSeen (UpdateLastSeenRequest) returns (LastSeenReply) {
    }
}

message LastSeenRequest {
    string ip = 1;
    string since = 2;
}

message UpdateLastSeenRequest {
    string ip = 1;
}

message LastSeenReply {
    int32 timesSeen = 1;
    string ip = 2;
    string from = 3;
    string to = 4;
}